--- a/第一章/1.3 外联式的CSS.html
+++ b/第一章/1.3 外联式的CSS.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>  
 <html lang="en">  
 <head>  
-	<meta charset="UTF-8">  
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-	<title>CSS</title>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>CSS</title>  
+    <link rel="stylesheet" href="文件.css">  
 </head>  
 <style>  
-	div {  
-		color: red;  
-		font-size: 18px;  
-	}  
+    div {  
+        color: red;  
+        font-size: 18px;  
+    }  
 </style>  
 <body>  
-	<div>我的颜色是红色</div>  
+    <div>我的颜色是红色</div>  
 </body>  
 </html>  
